--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: base
 <h4 align="center">DALLAS | SAN FRANCISCO | CHICAGO | PITTSBURGH | BOSTON | NEW YORK</h4>
 <p align="center">Started in 2016 in Dallas, HLC has regional offices in six strategic innovation centers across the United States. <br>Over 80% of private equity deal flow comes through these cities.<br>We also focus on emerging markets and opportunities in India and China.</p>
         <h4 align="center">CONTACT</h4>
-        <h5 align="center">Jessy_Chao@happylifecapital.com<a href="mailto:Jessy_Chao@happylifecapital.com"></a>                                       Charles_Mao@happylifecapital.com<a href="mailto:Charles_Mao@happylifecapital.com"></a></h5>
+        <h5 align="center">Jessy_Chao@happylifecapital.com<a href="mailto:Jessy_Chao@happylifecapital.com"></a> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Charles_Mao@happylifecapital.com<a href="mailto:Charles_Mao@happylifecapital.com"></a></h5>
 </div>
     </div>
   </div>
