--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: base
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 	<h1 align="center">Happy Life Capital, LLC.</h1>
 	<h4 align="center">HLC is a new private equity International Global Opportunity Fund</h4> 
-    <img align="left" src="/img/HLC.png" alt="text">
+    <img align="left" hspace="20" src="/img/HLC.png" alt="text">
   <ul>
 	  <li>We invest in technology, Healthcare, and Energy.</li>
 	  <li>Our strategic areas of interest are AI, IT, Analytics, Integrated Networking, and Big Data.</li>
