--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@ layout: base
 	  <li>We look for large market opportunities with a clear opportunity for traction and exit.</li>
 </ul>
         <br>
+        <h5 align="left">LP Charles Mao &nbsp; &nbsp; LP Jessy Chao</h5>
         <br>
         <hr>
         <br>
 <h4 align="center">DALLAS | SAN FRANCISCO | CHICAGO | PITTSBURGH | BOSTON | NEW YORK</h4>
 <p align="center">Started in 2016 in Dallas, HLC has regional offices in six strategic innovation centers across the United States. <br>Over 80% of private equity deal flow comes through these cities.<br>We also focus on emerging markets and opportunities in India and China.</p>
         <h4 align="center">CONTACT</h4>
-        <p align="center"><a href="mailto:Jessy_Chao@happylifecapital.com">Jessy_Chao@happylifecapital.com</a> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="mailto:Charles_Mao@happylifecapital.com">Charles_Mao@happylifecapital.com</a></p>
+        <p align="center"><a href="mailto:Jessy_Chao@happylifecapital.com">Jessy_Chao@happylifecapital.com</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="mailto:Charles_Mao@happylifecapital.com">Charles_Mao@happylifecapital.com</a></p>
 </div>
     </div>
   </div>
