--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@ layout: base
 	  <li>Our focus is on Data Management and Interpretation, Intelligent Software Platforms, Interactive and Ambulatory Robotics, Advanced Personalized Healthcare, and Efficient, Sustainable Energy.</li>
 	  <li>We look for large market opportunities with a clear opportunity for traction and exit.</li>
 </ul>
-        <br>
-        <h5 align="left">LP Charles Mao &nbsp; &nbsp; LP Jessy Chao</h5>
+        <h5 align="left">&nbsp;LP Charles Mao &nbsp; &nbsp; LP Jessy Chao</h5>
         <hr>
         <br>
 <h4 align="center">DALLAS | SAN FRANCISCO | CHICAGO | PITTSBURGH | BOSTON | NEW YORK</h4>
