--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: base
 	  <li>We look for large market opportunities with a clear opportunity for traction and exit.</li>
 </ul>
         <br>
-        <h5 align="left">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;LP Charles Mao &nbsp; &nbsp; LP Jessy Chao</h5>
+        <h5 align="left">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;LP Charles Mao &nbsp; &nbsp; LP Jessy Chao</h5>
         <hr>
         <br>
 <h4 align="center">DALLAS | SAN FRANCISCO | CHICAGO | PITTSBURGH | BOSTON | NEW YORK</h4>
